Pre-submission Corrections

--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 	</head>
 	<body>
 		<div id="leftHeader">
-			<h1>DATS 6401 - Individual Project - Brewster, Paul</h1>
-		</div>
-		<div id="logo">
+			<h2>DATS 6401 - Individual Project - Brewster, Paul</h2>
 		</div>
 		<div id="graphicBody">
-			<div class="w3-sidebar w3-bar-block w3-light-grey w3-card tab" style="width:15%">
-				<h3 class="w3-bar-item">G-20 Education, health Care and Military Spending</h3>
+			<div class="w3-sidebar w3-bar-block w3-light-grey w3-card tab" style="width:25%">
+				<h3 class="w3-bar-item">G-20 Education, Health Care and Military Spending</h3>
 				<button class="w3-bar-item w3-button tablinks" onclick="openText(event, 'introText')" id="defaultOpen">Introduction</button>
 				<button class="w3-bar-item w3-button tablinks" onclick="openText(event, 'learningProcessText')">Learning Process</button>
 				<button class="w3-bar-item w3-button tablinks" onclick="openGraph(event, 'spendingToGDP')" >Spending to GDP</button>
@@ -37,7 +35,7 @@
 				<button class="w3-bar-item w3-button tablinks" onclick="openText(event, 'conclusionText')">Conclusion</button>
 				<button class="w3-bar-item w3-button tablinks" onclick="openText(event, 'referenceText')" id="defaultOpen">References</button>
 			</div>
-			<div id="rightSide" style="margin-left:15%">
+			<div id="rightSide" style="margin-left:25%">
 				<div id="introText" class="tabcontent">
 					<span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
 					<h2>Introduction</h2>
